--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing = "10">
         <tr>
-            <td><img src = "images/profile photo.png" alt = "This is profile photo."></td>
+            <td><img src = "profile photo.png" alt = "This is profile photo."></td>
             <td><h1>Soumya Ranjan Tripathy</h1>
                 <p>I am a <em><strong>Web Developer</strong></em> as well as <em><strong>Android & IOS App Developer</strong></em>.</p></td>
         </tr>
