--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     
     <hr size = "3" noshade="noshade">
     <h1>Studies</h1>
-    <p>I did my Schooling from Freedom International School from Std.6-12.<br>
-    Currently I am in 3rd year of my Degree pursuing BSc in Computer Science.</p>
+    <p>I did my Schooling from Freedom International School (2014-2021).<br>
+    Currently I am in 3rd year pursuing BSc in Computer Science.</p>
     <hr size = "3" noshade="noshade">
     <h1>Work Experience</h1>
     <ul>
