Updated the images file path in index.html

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 </head>
 <body>
     <div class="parent">
-        <img src="images/cloud.png" class = "cloud1">
+        <img src="cloud.png" class = "cloud1">
         <h1 class="heading1">
             I'm Soumya.
         </h1>
         <p class="p1">
             a <span class = "pro">pro</span>grammer
         </p>
-        <img src="images/cloud.png" class = "cloud2">
-        <img src="images/mountain.png" class = "mountain">
+        <img src="cloud.png" class = "cloud2">
+        <img src="mountain.png" class = "mountain">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="images/soumya.png" alt="soumya_photo" class = "photo">
+          <img src="soumya.png" alt="soumya_photo" class = "photo">
           <h2 class = "hello">Hello.</h2>
           <p>I am Soumya Tripathy and I am Web Designer as well as App Developer.</p>
         </div>
@@ -33,12 +33,12 @@
         <div class="skills">
           <h1 class = "skill">My Skills.</h1>
           <div class="skill-row">
-            <img class="logo" src="images/web development.gif" alt="website development">
+            <img class="logo" src="web development.gif" alt="website development">
             <h3 class = "skill align">Website Development</h3>
             <p class = "align desc">I learnt HTML, CSS, JavaScript, BootStrap CSS, Tailwind CSS to create awesome websites that i want.</p>
           </div>
           <div class="skill-row">
-            <img class="logo right" src="images/Mobileapp.gif" alt="app development">
+            <img class="logo right" src="Mobileapp.gif" alt="app development">
             <h3 class = "skill align">App Development</h3>
             <p class = "align desc">Since 1 month I have been learning app development using Flutter that are highly supportive for all type of devices with one codebase.</p>
           </div>
